# robotframework-writing-skills

./: .gitignore  LICENSE  README.md
openspec/changes/archive/2026-03-30-normalize-root-env-loading/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-30-normalize-root-env-loading/specs/root-env-loading/: spec.md
openspec/changes/archive/2026-03-30-tighten-bootstrap-dependency-parsing/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-30-tighten-bootstrap-dependency-parsing/specs/bootstrap-dependency-validation/: spec.md
openspec/specs/bootstrap-dependency-validation/: spec.md
skills/openapi-splitter/: SKILL.md
skills/openapi-splitter/references/: README.md
skills/openapi-splitter/scripts/: split_openapi.py
skills/robot-api-test-suite/: SKILL.md
skills/robot-api-test-suite/assets/templates/: api_keywords.robot  api_resources.robot  scenario.robot  utils_keywords.robot
skills/robot-api-test-suite/references/: robot_api_patterns.md
skills/robot-beginner-test-guide/: SKILL.md
skills/robot-beginner-test-guide/agents/: openai.yaml
skills/robot-env-bootstrap/: SKILL.md
skills/robot-env-bootstrap/assets/: example.env  pyproject.toml
skills/robot-env-bootstrap/scripts/: bootstrap_env.py
skills/robot-test-runner/: SKILL.md
