[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "robot-api-tests"
version = "0.1.0"
description = "Robot Framework API test suite"
requires-python = ">=3.13"
dependencies = [
  "robotframework>=6.1",
  "robotframework-requests>=0.9",
  "robotframework-faker>=5.0",
  "python-dotenv>=1.0",
]
